Eventbrite test structure added

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,38 +1,19 @@
-<section class="[ band  band--tint ]  page-foot">
+<footer class="group">
+    <div class="page-width">
+        <div class="grid">
+                <div class="grid__item two-thirds below-desk-one-whole">
+                    <p class="brand-face--condensed caps gamma flush">Call: <strong>0845 833 0933</strong><span class="push-half--sides">|</span>Fax: <strong>0845 833 8561</strong></p>
+                        <ul class="nav footer__social-links">
+                            <li><a href="http://www.angelsolutions.co.uk/twitter" title="Follow us on Twitter"><span class="typicons--twitter-circled"></span></a></li>
+                            <li><a href="https://www.facebook.com/AngelSolutionsLtd/" target="_blank" title="Like us Facebook"><span class="typicons--facebook-circled-1"></span></a></li>
+                            <li class="push-half--right"><a href="https://www.linkedin.com/company/angel-solutions-ltd" target="_blank" title="See us on LinkedIn"><span class="typicons--linkedin-circled-1"></span></a></li>
+                        </ul>
+                        <p class="soft-half--top flush--bottom"><span class="footer__copy">&copy; Angel Solutions Ltd 2016<span class="push-half--sides">|</span></span> Test Area</p>
 
-    <div class="wrapper">
-        <div class="layout  layout--middle">
-            <div class="layout__item  lap-and-up-one-quarter">
-                [insert img here]
-            </div
-           ><div class="layout__item  lap-and-up-one-quarter">
-                <p>Osborn Multimedia is the portfolio, blog and digital playground of Dave Osborn, a front-end developer and designer living in Wigan and working for <a href="//www.angelsolutions.co.uk/">Angel Solutions</a> in Liverpool.</p>
-            </div
-           ><div class="layout__item  lap-and-up-one-half">
-               <ul class="list-social">
-                    <li class="list-social__item">
-                        <a rel="me" href="https://twitter.com/DaveOsborn_"><i class="icon  icon--round-twitter"></i>Twitter</a>
-                    </li>
-                    <li class="list-social__item">
-                        <a rel="me" href="https://github.com/DaveOsborn"><i class="icon  icon--round-github"></i>Github</a>
-                    </li>
-                    <li class="list-social__item">
-                        <a rel="me" href="https://dribbble.com/DaveOsborn_"><i class="icon  icon--round-dribbble"></i>Dribbble</a>
-                    </li>
-                    <li class="list-social__item">
-                        <a rel="me" href="https://uk.linkedin.com/pub/david-osborn/30/64/b01"><i class="icon  icon--round-linkedin"></i>LinkedIn</a>
-                    </li>
-                </ul>
-            </div>
+                </div><!--
+             --><div class="grid__item one-third below-desk-one-whole">
+
+                </div>
         </div>
     </div>
-
-</section>
-
-<footer class="page-micro">
-
-    <p class="wrapper">
-        <small class="page-micro__copy">&copy; 2015 &mdash; Dave Osborn | <a href="{{site.baseurl}}">osbornmultimedia.com</a> | All rights reserved</small>
-    </p>
-
 </footer>
