--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,44 +1,50 @@
-<head>
 
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, minimum-scale=1.0">
+<head id="PageHeader">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="PKN6x1Ow3J90M9oIY_XXJYkh3DYLtMlvcHg6EPHHrFk" />
+    <meta name="google-site-verification" content="ifCfazJk4UnVQGSwuoC4S1R66-D9zhggz0D4f1THQ7M" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
 
-<title>{{ page.title }} &ndash; Osborn Multimedia &ndash; The Portfolio and Blog of Dave Osborn (CSS, OOCSS, front-end magic, graphic design and plenty more)</title>
+    <title>{{ page.title }} &ndash; Eventbrite Test &ndash;</title>
+    <link rel="dns-prefetch" href="//fonts.googleapis.com">
 
-<!-- Prefetch DNS for external assets (Twitter widgets etc). -->
-<link rel="dns-prefetch" href="//fonts.googleapis.com">
-<link rel="dns-prefetch" href="//themes.googleusercontent.com">
-<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans|Crete+Round">
-<link rel="stylesheet" href="/css/osbornmultimedia.min.css">
+    <link href='http://fonts.googleapis.com/css?family=Lily+Script+One|Oswald:300, 400,700|Open+Sans:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
+    <!--[if lt IE 9]>
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css" />
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:400italic" rel="stylesheet" type="text/css" />
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:400" rel="stylesheet" type="text/css" />
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:700italic" rel="stylesheet" type="text/css" />
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:700" rel="stylesheet" type="text/css" />
+        <link href="https://fonts.googleapis.com/css?family=Oswald:300" rel="stylesheet" type="text/css" />
+        <link href="https://fonts.googleapis.com/css?family=Oswald:400" rel="stylesheet" type="text/css" />
+        <link href="https://fonts.googleapis.com/css?family=Oswald:700" rel="stylesheet" type="text/css" />
+        <link href="https://fonts.googleapis.com/css?family=Lily+Script+One" rel="stylesheet" type="text/css" />
+    <![endif]-->
 
-<link rel="dns-prefetch" href="//platform.twitter.com">
-<link rel="dns-prefetch" href="//www.google-analytics.com">
-<link rel="dns-prefetch" href="https://twitter.com">
+    <link rel="dns-prefetch" href="https://ncer.org">
+    <link rel="dns-prefetch" href="https://perspective.angelsolutions.co.uk">
+    <link rel="dns-prefetch" href="https://twitter.com">
+    <link rel="dns-prefetch" href="//www.google-analytics.com">
 
-<!-- Prerender work page -->
-<link rel="prerender" href="http://osbornmultimedia.com/work/">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="@angel_solutions">
+    <meta name="twitter:domain" content="angelsolutions.co.uk">
+    <meta name="twitter:creator" content="@angel_solutions">
+    <meta name="twitter:title" content="Extraordinary thinking - Creating innovative web applications for those passionate about education - Angel Solutions">
+    <meta name="twitter:image:src" content="http://www.angelsolutions.co.uk/wp-content/themes/angel/angel-logo.png">
 
-<meta name="twitter:card" content="summary">
-<meta name="twitter:site" content="@DaveOsborn_">
-<meta name="twitter:domain" content="osbornmultimedia.com">
-<meta name="twitter:creator" content="@DaveOsborn_">
-<meta name="twitter:title" content="{{ page.title }} – Osborn Multimedia">
-<meta name="twitter:image:src" content="/logo.png">
-{% if page.meta %}
-    <meta name="twitter:description" content="{{ page.meta }}">
-{% endif %}
+    <link rel="shortcut icon" href="http://www.angelsolutions.co.uk/wp-content/themes/angel/favicon.ico?v3" />
+    <link rel="apple-touch-icon" href="http://www.angelsolutions.co.uk/wp-content/themes/angel/apple-touch-icon.png" />
 
-<link rel="alternate" type="application/atom+xml" href="http://feeds.feedburner.com/osbornmultimedia">
+    <link rel="stylesheet" type="text/css" charset="UTF-8" media="all" href="{{site.baseurl}}/css/style.css?v3" />
 
-<link rel="shortcut icon" href="/icon.png">
-<link rel="apple-touch-icon-precomposed" href="/icon.png">
-<meta name="apple-mobile-web-app-title" content="osbornmultimedia">
-<meta name="description" content="Articles on CSS, OOCSS, SASS, front-end magic and graphic design">
-<link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
-<style>
-    html{font-family:"Open Sans",sans-serif; color:white; background:#0AC5F4; text-align:center;}
-    h1{font-family:"Crete Round",serif; text-shadow: 0px 2px 2px Black; font-size:75px; font-weight: normal}
-</style>
+    <script type="text/javascript" src="http://www.angelsolutions.co.uk/wp-content/themes/angel/js/modernizr-2.8.3.min.js"></script>
 
+    <meta name="description" itemprop="description" content="Angel Solutions Ltd creates quality web applications for UK Schools, Children Centres, Local Authorities and major businesses." />
+
+    <meta name="keywords" itemprop="keywords" content="Angel Solutions Ltd, Education, Microsoft Gold Partner, ASP.net, Schools, Children Centres, Local Authorities, Perspective, Nexus, Pendulum, Broadcast, Business Diagnostic Platform, Cegos, Liverpool, Manchester, UK, England, School Improvement, 5 Minute Lesson Plan" />
+
+    <link rel="canonical" href="http://www.angelsolutions.co.uk/" />
 </head>
