--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,8 @@
-<header class="page-head">
+{% include nav.html %}
 
-    <div class="wrapper">
-
-        {% include nav.html %}
-
+<header>
+    <div class="page-width text--center kilo-alpha">
+        <span class="themeLoc" data-add="http://www.angelsolutions.co.uk/wp-content/themes/angel"></span>
+        <a href="http://www.angelsolutions.co.uk" class="logo logo--angel mega-kilo" title="Home | Angel Solutions Ltd"><img alt="Angel Solutions Logo" src="http://www.angelsolutions.co.uk/wp-content/themes/angel/images/angel-logo.svg"><span class="logo--angel__angel"> Angel </span><span class="logo__strap">Solutions</span></a>
     </div>
-
 </header>
