--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,22 +1,9 @@
-<nav class="site-nav">
-
-    <a href="{{ site.baseurl }}/" class="site-nav__home">
-        [Logo here]
-    </a>
-
-    <ul class="site-nav__list">
-        <li class="site-nav__item">
-            <a href="{{ site.baseurl }}/about/" class="site-nav__link">About</a>
-        </li>
-        <li class="site-nav__item">
-            <a href="{{ site.baseurl }}/work/" class="site-nav__link">Work</a>
-        </li>
-        <li class="site-nav__item">
-            <a href="{{ site.baseurl }}/blog/" class="site-nav__link">Blog</a>
-        </li>
-        <li class="site-nav__item">
-            <a href="{{ site.baseurl }}/contact/" class="site-nav__link">Get in touch</a>
-        </li>
-    </ul>
-
-</nav>
+        <div class="page-nav">
+            <div class="page-width text--center">
+                <div class="menu-angelroot-container">
+                    <ul id="menu-angelroot" class="nav menu flush">
+                        <li id="menu-item-2643" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-333 current_page_item menu-item-2643"><a title="Angel Home" href="http://www.angelsolutions.co.uk/"><span class='typicons--home'></span></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div><!-- END page-nav -->
