--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,12 +1,14 @@
 ---
 layout: default
 ---
+<div class="page-form">
+    <div class="page-wrapper theme--angel">
 
 {% include header.html %}
 
-<div class="wrapper">
+<div class="page-content">
 
-    <div class="layout">
+    <div class="page-width">
         <section class="layout__item  desk-three-fifths" data-ui-component="Main content">
 
             <h1>{{ page.title }}</h1>
@@ -23,5 +25,8 @@ layout: default
     </div>
 
 </div>
-
+</div>
 {% include footer.html %}
+
+
+</div>
